--- a/pkg/admin/gui/front-end/html/editTasks.html
+++ b/pkg/admin/gui/front-end/html/editTasks.html
@@ -155,7 +155,8 @@
                 {{ if ne $info "" }}
                     {{ $count = add $count 1 }}
                     <div class="input-group mb-2">
-                        <input type="text" name="infoTransfer[]" class="form-control" value="{{ $info }}">
+                        <input type="text" name="infoTransferKey[]" class="form-control" value="{{ index (split $info ":") 0 }}" placeholder="clé">
+                        <input type="text" name="infoTransferValue[]" class="form-control" value="{{ index (split $info ":") 1 }}" placeholder="valeur">
                         <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                             <i class="bi bi-trash"></i>
                         </button>
@@ -164,7 +165,8 @@
             {{ end }}
             {{ if eq $count 0 }}
                 <div class="input-group mb-2">
-                    <input type="text" name="infoTransfer[]" class="form-control" placeholder="{{ index .tab "info" }}">
+                    <input type="text" name="infoTransferKey[]" class="form-control" placeholder="clé">
+                    <input type="text" name="infoTransferValue[]" class="form-control" placeholder="valeur">
                     <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                         <i class="bi bi-trash"></i>
                     </button>
@@ -173,7 +175,7 @@
         </div>
         <button type="button"
                 class="btn btn-outline-primary btn-sm"
-                onclick="addField(this,'infoTransfer[]')">
+                onclick="addField(this)">
             add
         </button>
     </div>
@@ -343,7 +345,15 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "keyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipKeyNameEncrypt" }}"></i> :</label>
-        <input type="text" name="keyNameEncrypt" class="form-control" value="{{ index .Args "keyName" }}">
+        <select id="keyTypeEncrypt" name="keyNameEncrypt" class="form-select">
+            <option value="" disabled selected>{{ index .tab "selectKeyType" }}</option>
+            {{ $args := .Args }}
+            {{ range $type, $list := .EncryptKeyTypes }}
+            {{ range $list }}
+                <option value="{{ . }}" {{ if eq (index $args "keyName") . }}selected{{ end }}>{{ . }}</option>
+            {{ end }}
+        {{ end }}
+        </select>
     </div>
 </div>
 {{ end}}
@@ -376,7 +386,15 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "keyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipKeyNameDecrypt" }}"></i> :</label>
-        <input type="text" name="keyNameDecrypt" class="form-control" value="{{ index .Args "keyName" }}">
+        <select id="keyTypeDecrypt" name="keyNameDecrypt" class="form-select">
+            <option value="" disabled selected>{{ index .tab "selectKeyType" }}</option>
+            {{ $args := .Args }}
+            {{ range $type, $list := .DecryptKeyTypes }}
+                {{ range $list }}
+                    <option value="{{ . }}" {{ if eq (index $args "keyName") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            {{ end }}
+        </select>
     </div>
 </div>
 {{ end}}
@@ -402,7 +420,15 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "keyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipKeyNameSign" }}"></i> :</label>
-        <input type="text" name="keyNameSign" class="form-control" value="{{ index .Args "keyName" }}">
+        <select id="keyTypeSign" name="keyNameSign" class="form-select">
+            <option value="" disabled selected>{{ index .tab "selectKeyType" }}</option>
+            {{ $args := .Args }}
+            {{ range $type, $list := .SignKeyTypes }}
+                {{ range $list }}
+                    <option value="{{ . }}" {{ if eq (index $args "keyName") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            {{ end }}
+        </select>
     </div>
 </div>
 {{ end}}
@@ -428,7 +454,15 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "keyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipKeyNameVerify" }}"></i> :</label>
-        <input type="text" name="keyNameVerify" class="form-control" value="{{ index .Args "keyName" }}">
+        <select id="keyTypeVerify" name="keyNameVerify" class="form-select">
+            <option value="" disabled selected>{{ index .tab "selectKeyType" }}</option>
+            {{ $args := .Args }}
+            {{ range $type, $list := .VerifyKeyTypes }}
+                {{ range $list }}
+                    <option value="{{ . }}" {{ if eq (index $args "keyName") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            {{ end }}
+        </select>
     </div>
 </div>
 {{ end}}
@@ -450,7 +484,7 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "method" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMethodEncrypt&Sign" }}"></i> :</label>
-        <select name="methodEncrypt&Sign" id="methodEncrypt&Sign" class="form-select">
+        <select name="methodEncrypt&Sign" id="methodEncryptSign" class="form-select">
             <option value="" disabled selected>{{ index .tab "selectMethodEncrypt&Sign" }}</option>
             {{ $args := .Args }}
             {{ range .EncryptSignMethods }}
@@ -461,12 +495,28 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "encryptKeyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipEncryptKeyName" }}"></i> :</label>
-        <input type="text" name="encryptKeyNameEncrypt&Sign" class="form-control" value="{{ index .Args "encryptKeyName" }}">
+        <select id="keyTypeEncryptSignEncrypt" name="encryptKeyNameEncrypt&Sign" class="form-select">
+            <option value="" disabled selected>{{ index .tab "selectKeyType" }}</option>
+            {{ $args := .Args }}
+            {{ range $method, $types := .EncryptSignKeyTypes }}
+                {{ range $types.encrypt }}
+                    <option value="{{ . }}" {{ if eq (index $args "encryptKeyName") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            {{ end }}
+        </select>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "signKeyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipSignKeyNameEncrypt&Sign" }}"></i> :</label>
-        <input type="text" name="signKeyNameEncrypt&Sign" class="form-control" value="{{ index .Args "signKeyName" }}">
+        <select id="keyTypeEncryptSignSign" name="signKeyNameEncrypt&Sign" class="form-select">
+            <option value="" disabled selected>{{ index .tab "selectKeyType" }}</option>
+            {{ $args := .Args }}
+            {{ range $method, $types := .EncryptSignKeyTypes }}
+                {{ range $types.sign }}
+                    <option value="{{ . }}" {{ if eq (index $args "signKeyName") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            {{ end }}
+        </select>
     </div>
 </div>
 {{ end}}
@@ -488,10 +538,10 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "method" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMethodDecrypt&verify" }}"></i> :</label>
-        <select name="methodDecrypt&verify" id="methodDecrypt&verify" class="form-select">
+        <select name="methodDecrypt&verify" id="methodDecryptVerify" class="form-select">
             <option value="" disabled selected>{{ index .tab "selectMethodDecrypt&verify" }}</option>
             {{ $args := .Args }}
-            {{ range .EncryptSignMethods }}
+            {{ range .DecryptVerifyMethods }}
             <option value="{{ . }}" {{ if eq (index $args "method") . }}selected{{ end }}>{{ . }}</option>
             {{ end }}
         </select>
@@ -499,12 +549,28 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "decryptKeyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipDecryptKeyName" }}"></i> :</label>
-        <input type="text" name="decryptKeyNameDecrypt&verify" class="form-control" value="{{ index .Args "decryptKeyName" }}">
+        <select id="keyTypeDecryptVerifyDecrypt" name="decryptKeyNameDecrypt&verify" class="form-select">
+            <option value="" disabled selected>{{ index .tab "selectKeyType" }}</option>
+            {{ $args := .Args }}
+            {{ range $method, $types := .DecryptVerifyKeyTypes }}
+                {{ range $types.decrypt }}
+                    <option value="{{ . }}" {{ if eq (index $args "decryptKeyName") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            {{ end }}
+        </select>
     </div>
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
-        <label class="col-form-label">{{ index .tab "signKeyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipSignKeyNameDecryptKeyName" }}"></i> :</label>
-        <input type="text" name="signKeyNameEncrypt&Sign" class="form-control" value="{{ index .Args "signKeyName" }}">
+        <label class="col-form-label">{{ index .tab "verifyKeyName" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipVerifyKeyName" }}"></i> :</label>
+        <select id="keyTypeDecryptVerifyVerify" name="verifyKeyNameDecrypt&verify" class="form-select">
+            <option value="" disabled selected>{{ index .tab "selectKeyType" }}</option>
+            {{ $args := .Args }}
+            {{ range $method, $types := .DecryptVerifyKeyTypes }}
+                {{ range $types.verify }}
+                    <option value="{{ . }}" {{ if eq (index $args "verifyKeyName") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            {{ end }}
+        </select>
     </div>
 </div>
 {{ end}}
