feat/add first version of transfer monitoring (with minimum view of informations)

--- a/pkg/admin/gui/front-end/html/home_page.html
+++ b/pkg/admin/gui/front-end/html/home_page.html
@@ -87,10 +87,10 @@
       </a>
     </div>
     <div class="col-sm-4">
-      <a href="transfer_management.html" class="text-decoration-none text-dark">
+      <a href="transfer_monitoring" class="text-decoration-none text-dark">
         <div class="card text-center p-3">
           <i class="bi bi-arrow-left-right fs-2"></i>
-          <div>{{ index .tab "transfer_management" }}</div>
+          <div>{{ index .tab "transfer_monitoring" }}</div>
         </div>
       </a>
     </div>
